--- a/src/sdk/CompositeInspector/Views/CommandRegistry/Index.cshtml
+++ b/src/sdk/CompositeInspector/Views/CommandRegistry/Index.cshtml
@@ -41,7 +41,7 @@
 				 
 <h5>Publication Records</h5>
 
-@if (Model.Records.Count() == 0)
+@if (Model.RecordCount == 0)
 {
 	<div>
 		No commands have been published through this composite
@@ -79,6 +79,39 @@ else
 			</tr>
 		}
 	</table>
+    
+    <div class="row">
+        <div class="span4 columns offset6">
+            <div class="pagination">
+                @{
+                    var prev = "prev";
+                    var prevUrl = Url.Action("Index", "CommandRegistry", new {pageSize = Model.RowsPerPage, offSet = Model.CurrentPage - 1});
+                    if (!Model.HasPreviousPage)
+                    {
+                        prev = "prev disabled";
+                        prevUrl = "#";
+                    }
+
+                    var next = "next";
+                    var nextUrl = Url.Action("Index", "CommandRegistry", new {pageSize = Model.RowsPerPage, offSet = Model.CurrentPage + 1});
+                    if (!Model.HasNextPage)
+                    {
+                        next = "next disabled";
+                        nextUrl = "#";
+                    }                                                   
+                }
+                <ul>
+                    <li class="@prev">
+                        <a href="@prevUrl">← Prev</a>
+                    </li>
+                    <li class="active"><a href="#">@(Model.CurrentPage + 1) of @(Model.TotalPages + 1)</a></li>
+                    <li class="@next">
+                        <a href="@nextUrl">Next →</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 }
 
 <table>
