show/remove frame button

--- a/src/sdk/CompositeInspector/Views/Frame/Index.cshtml
+++ b/src/sdk/CompositeInspector/Views/Frame/Index.cshtml
@@ -9,7 +9,7 @@
         <title>Composite Inspector</title>
     </head>
         <frameset cols="0" rows="350,*">
-            <frame src="@Url.Action("Index", "Composite")" border="0"/>
+            <frame src="@Url.Action("Index", "Composite")" border="0" name="in-frame"/>
             <frame src="/"/>
         </frameset>
 </html>
