--- a/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
 
             <div class="span5 columns">
                 <a href="@Url.Action("Remove", "Frame")" class="btn primary" id="remove-frame" target="_parent">Remove Frame</a>
+                <a href="@Url.Action("Index", "Frame")" class="btn primary" id="show-frame" target="_parent">Show Frame</a>
             </div>
 
 			<div class="span5 columns">
