--- a/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>@ViewBag.Title</title>
+	<title>@ViewBag.CompositeName Inspector - @ViewBag.Title</title>
 	@RenderPage("Styles.cshtml")
 	@RenderPage("Scripts.cshtml")
 </head>
 <body>
 
-	<div class="container-fluid">
+	<div class="container">
 
 		<div class="row show-grid">
 
@@ -31,30 +31,34 @@
 
 			</div>
 
-
-
 		</div>
 
 		<div class="span16 columns">
 			@RenderBody()
 		</div>
 
-		<div class="row show-grid">
+	</div>
+	<hr />
+	<div class="container">
 
-            <div class="span5 columns">
-                <a href="@Url.Action("Remove", "Frame")" class="btn primary" id="remove-frame" target="_parent">Remove Frame</a>
-                <a href="@Url.Action("Index", "Frame")" class="btn primary" id="show-frame" target="_parent">Show Frame</a>
-            </div>
+		<div class="row show-grid footer">
 
 			<div class="span5 columns">
-				<input type="text" placeholder="Get publication by id" id="publication-record-id" class="guid-input" />
+				<a href="@Url.Action("Remove", "Frame")" class="btn small" id="remove-frame" target="_parent">
+					Remove Frame</a> <a href="@Url.Action("Index", "Frame")" class="btn" id="show-frame" target="_parent">
+						Show Frame</a>
 			</div>
 
+			<div class="span11 columns" style="text-align: right;">
+				<input type="text" placeholder="Get publication by id" id="publication-record-id"
+					class="guid-input" />&nbsp;<a href="#" class="btn">Go</a>
+			</div>
 
 		</div>
 
 	</div>
-
+	<br/>
 	<hr />
+
 </body>
 </html>
