--- a/src/sdk/CompositeInspector/Views/Frame/Index.cshtml
+++ b/src/sdk/CompositeInspector/Views/Frame/Index.cshtml
@@ -1,15 +1,13 @@
 ﻿@model object
-
 @{
-    Layout = null;
+	Layout = null;
 }
-
 <html>
-    <head>
-        <title>Composite Inspector</title>
-    </head>
-        <frameset cols="0" rows="350,*">
-            <frame src="@Url.Action("Index", "Composite")" border="0"/>
+<head>
+	<title>Composite Inspector</title>
+</head>
+<frameset cols="0" rows="350,*">
+            <frame src="@Url.Action("Index", "Composite")" frameborder="0"/>
             <frame src="/"/>
         </frameset>
 </html>
