wired up create post form; added a new overload to the BeginFormForInputModel helper to allow the caller to specify a redirect url

--- a/apps/ForumComposite/Views/Post/Thread.cshtml
+++ b/apps/ForumComposite/Views/Post/Thread.cshtml
@@ -43,7 +43,7 @@
 					</div>
 
 					<div class="Message">
-						<b>@comment.Title</b><br/>
+						<b>@comment.Title</b><br/><br/>
 							@comment.Body
 					</div>
 
