--- a/apps/ForumComposite/Views/Post/Create.cshtml
+++ b/apps/ForumComposite/Views/Post/Create.cshtml
@@ -1,27 +1,44 @@
 ﻿@using Euclid.Composites.Mvc.Extensions
 @using ForumComposite.Models
 @model PublishPostInputModel
-
 @{
 	ViewBag.Title = "Start a new discussion";
 }
 
-<h2>Start a New Discussion</h2>
-@using (Html.BeginFormForInputModel(Model))
-{
-        <div>
-            @Html.LabelFor(m=>m.Title)
-            @Html.TextBoxFor(m=>m.Title)
-        </div>
+<div id="DiscussionForm">
+	<h2>Start a New Discussion</h2>
+	@using (Html.BeginFormForInputModel(Model, true, Url.Action("List")))
+ {
+		<div>
+			@Html.LabelFor(m => m.Title)
+			@Html.TextBoxFor(m => m.Title, new { @class = "InputBox", maxlength = "100", id = "Form_Name" })
+		</div>
+	 
+@*		<div class="Category">
+			<label for="Form_CategoryID">Category</label>
+			<select id="Form_CategoryID" name="Discussion/CategoryID">
+				<option value="1">General</option>
+				<option value="2">Inspiration</option>
+				<option value="3">Tutorials</option>
+				<option value="4">↳&#160;Illustration</option>
+				<option value="5">↳&#160;Web&#160;Design</option>
+				<option value="6">Others</option>
+			</select>
+		</div>*@
+	 
+		<div>
+			@Html.LabelFor(m => m.Body)
+			@Html.TextAreaFor(m => m.Body, new { @class = "TextBox", rows = "6", cols = "100", id = "Form_Body" })
+		</div>
 
-        <div>
-            @Html.LabelFor(m=>m.Body)
-            @Html.TextAreaFor(m=>m.Body)
-        </div>
+		<div class="PostFormControlPanel">
+			<input type="submit" id="Form_PostDiscussion" name="Discussion/Post_Discussion" value="Post Discussion"
+				class="Button DiscussionButton" />
+@*			<input type="submit" id="Form_SaveDraft" name="Discussion/Save_Draft" value="Save Draft"
+				class="Button DraftButton" />
+			<input type="submit" id="Form_Preview" name="Discussion/Preview" value="Preview"
+				class="Button PreviewButton" />*@
+		</div>
+ }
+</div>
 
-	<div class="PostFormControlPanel">
-		<input type="submit" id="Form_PostDiscussion" name="Discussion/Post_Discussion" value="Post Discussion" class="Button DiscussionButton" />
-		<input type="submit" id="Form_SaveDraft" name="Discussion/Save_Draft" value="Save Draft" class="Button DraftButton" />
-		<input type="submit" id="Form_Preview" name="Discussion/Preview" value="Preview" class="Button PreviewButton" />
-	</div>
-}
