--- a/apps/ForumComposite/Views/Shared/TopMenu.cshtml
+++ b/apps/ForumComposite/Views/Shared/TopMenu.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="Tabs DiscussionsTabs">
 	<ul>
-		<li class="Active">@Html.ActionLink("All Discussions", "Thread")</li>
+		<li class="Active">@Html.ActionLink("All Discussions", "List", "Post")</li>
 		<li><a href="#mybookmarks" class="MyBookmarks">My Bookmarks<span>10</span></a></li> 
 		<li><a href="#mydiscussions" class="MyDiscussions">My Discussions<span>27</span></a></li> 
 		<li class="add-discussion">@Html.ActionLink("Start a new discussion", "Create", "Post")</li> 
