implemented basic registration & authentication; passwords aren't even hashed yet but the basics are in place; still need to wire up usernames on posts and comments

--- a/apps/ForumComposite/Views/Shared/LeftMenu.cshtml
+++ b/apps/ForumComposite/Views/Shared/LeftMenu.cshtml
@@ -1,7 +1,13 @@
 ﻿<ul>
-	<li><a href="#mydiscussions">Discussions</a><a href="#feed"	id="discussions-rss"></a></li>
-	<li><a href="#">Activity</a></li>
-	<li><a href="#">Inbox</a></li>
-	<li><a href="#">Sign Out</a></li>
-	<!--<li><a href="#" class="SignInPopup">Sign In</a></li>-->
+	<li><a href="#mydiscussions">Discussions</a><a href="#feed" id="discussions-rss"></a></li>
+	@if (Request.IsAuthenticated)
+ {
+		<li><a href="#">Activity</a></li>
+		<li><a href="#">Inbox</a></li>
+		<li>@Html.ActionLink("Sign Out", "SignOut", "Profile")</li>
+ }
+ else
+ {
+		<li>@Html.ActionLink("Sign In", "SignIn", "Profile")</li>
+ }
 </ul>
