--- a/apps/ForumComposite/Views/Post/Thread.cshtml
+++ b/apps/ForumComposite/Views/Post/Thread.cshtml
@@ -43,8 +43,9 @@
 					</div>
 
 					<div class="Message">
-						<b>@comment.Title</b><br/><br/>
-							@comment.Body
+						<b>@comment.Title</b><br />
+						<br />
+						@comment.Body
 					</div>
 
 				</div>
@@ -54,7 +55,9 @@
 	</ul>
 </div>
 
-<div class="Foot">
-	@Html.ActionLink("Add a Comment", "AddComment", new { postId = Model.InitialPost.Identifier}, new { @class = "TabLink SignInPopup" })
-</div>
-
+@if (Request.IsAuthenticated)
+{
+	<div class="Foot">
+		@Html.ActionLink("Add a Comment", "AddComment", new { postId = Model.InitialPost.Identifier }, new { @class = "TabLink SignInPopup" })
+	</div>
+}
