--- a/apps/ForumComposite/Views/Shared/TopMenu.cshtml
+++ b/apps/ForumComposite/Views/Shared/TopMenu.cshtml
@@ -1,9 +1,16 @@
 ﻿<div class="Tabs DiscussionsTabs">
 	<ul>
-		<li class="Active">@Html.ActionLink("All Discussions", "List", "Post")</li>
-		<li><a href="#mybookmarks" class="MyBookmarks">My Bookmarks<span>10</span></a></li> 
-		<li><a href="#mydiscussions" class="MyDiscussions">My Discussions<span>27</span></a></li> 
-		<li class="add-discussion">@Html.ActionLink("Start a new discussion", "Create", "Post")</li> 
+			<li class="Active">@Html.ActionLink("All Discussions", "List", "Post")</li>
+		@if (Request.IsAuthenticated)
+	{
+			<li><a href="#mybookmarks" class="MyBookmarks">My Bookmarks<span>10</span></a></li>
+			<li><a href="#mydiscussions" class="MyDiscussions">My Discussions<span>27</span></a></li>
+			<li class="add-discussion">@Html.ActionLink("Start a new discussion", "Create", "Post")</li>
+	}
+	else
+	{
+			<li class="add-discussion">@Html.ActionLink("Sign in", "SignIn", "Profile", null, new { @class="SignInPopup"})</li>
+		}
 	</ul>
 	<!--
 		<div class="SubTab"><span class="FirstCrumb">↳ </span>Nested Category</div>
