comments and posts are now tied to users

--- a/apps/ForumComposite/Views/Post/AddComment.cshtml
+++ b/apps/ForumComposite/Views/Post/AddComment.cshtml
@@ -10,6 +10,7 @@
 	@using (Html.BeginFormForInputModel(Model, true, Request.UrlReferrer.AbsoluteUri))
  {
 		@Html.HiddenFor(m => m.PostIdentifier)
+		@Html.HiddenFor(m => m.AuthorIdentifier)
 	 
 		<div>
 			<div>
